# HamAid

./: .gitignore  CMakeLists.txt  HamAid.c  btreeTest.c  btreeTest.h  button.c  button.h  buttonDemo.c  buttonDemo.h  config.c  config.h  display.c  display.h  fontDemo.c  fontDemo.h  lcd.c  lcd.h  lcd_touch.c  lcd_touch.h  readme.md  sqliteReader.cpp  sqliteReader.h
fontedit files/: readme.md
fontedit files/LiberationMonoFontEdit/: liberationMono06.fontedit  liberationMono07.fontedit  liberationMono08.fontedit  liberationMono09.fontedit  liberationMono10.fontedit  liberationMono11.fontedit  liberationMono12.fontedit  liberationMono14.fontedit  liberationMono16.fontedit  liberationMono18.fontedit  liberationMono20.fontedit  liberationMono22.fontedit  liberationMono24.fontedit  liberationMono26.fontedit  liberationMono28.fontedit  liberationMono36.fontedit  liberationMono48.fontedit  liberationMono72.fontedit
fonts/: fonts.h  fontsetup.h
fonts/liberationmono/: liberationmono.h  liberationmono10pt.c  liberationmono10ptdata.c  liberationmono11pt.c  liberationmono11ptdata.c  liberationmono12ptdata.c  liberationmono14pt.c  liberationmono16pt.c  liberationmono16ptdata.c  liberationmono18ptdata.c  liberationmono22pt.c  liberationmono22ptdata.c  liberationmono24pt.c  liberationmono36ptdata.c  liberationmono48pt.c  liberationmono48ptdata.c  liberationmono72pt.c  liberationmono7ptdata.c  liberationmono8ptdata.c  liberationmono9pt.c  liberationmono9ptdata.c
lib/config/: DEV_Config.c  DEV_Config.h
lib/fatfs/: CMakeLists.txt  diskio.c
lib/fonts/: readme.md
lib/fonts/liberationmono/: CMakeLists.txt  liberationmono12pt.c  liberationmono14ptdata.c  liberationmono18pt.c  liberationmono20pt.c  liberationmono20ptdata.c  liberationmono24ptdata.c  liberationmono26pt.c  liberationmono26ptdata.c  liberationmono28pt.c  liberationmono28ptdata.c  liberationmono36pt.c  liberationmono6pt.c  liberationmono6ptdata.c  liberationmono72ptdata.c  liberationmono7pt.c  liberationmono8pt.c
lib/sdcard/: MMC_SD.c
lib/sqlite/: CMakeLists.txt  cAPI.cpp  cAPI.h  sqliteReader.cpp  sqliteReader.h
